@@ -1,3 +1,9 @@
+2011-09-23  Don Porter  <dgp@users.sourceforge.net>
+
+	* tests/thread.test:	Stop using the deprecated thread management
+	commands of the tcltest package.  The test suite ought to provide
+	these tools for itself.  They do not belong in a testing harness.
+
 2011-09-22  Don Porter  <dgp@users.sourceforge.net>
 
 	* generic/tclCmdIL.c:	Revise [info frame] so that it stops creating
